[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://dodge_assets/art/floor.jpg" type="Texture" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 664, 0, 0, 0, 0, 0, 664, 1000, 0, 0, 0, 0, 336, 1000, 0, 0, 0, 0, 0, 1000, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
Enemy = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 666.0
margin_bottom = 999.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 412.058, 947.896 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
